k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory-service
  labels:
    name: memory-service
    app: maas
